5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1585_825.log
== TEST (2019-03-22 20:45:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("insira o raio desejado:"))
import math
Equacao1 - math.pi *(raio**2)

print(round(Equacao1,3))
print(round(Equacao2,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Equacao1 - math.pi *(raio**2)
NameError: name 'Equacao1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:45:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("insira o raio desejado:"))
import math
Equacao1 - math.pi *(raio**2)

print(round(Equacao1,3))
print(round(Equacao2,3))
-- EXECUTION TIME:
0.220842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 6, in <module>
    Equacao1 - math.pi *(raio**2)
NameError: name 'Equacao1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:46:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("insira o raio desejado:"))
import math
Equacao1 - math.pi *(raio**2)
 
import math
Equacao2 = (4/3) * math.pi * (raio**3)
print(round(Equacao1,3))
print(round(Equacao2,3))
-- EXECUTION TIME:
0.137706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 6, in <module>
    Equacao1 - math.pi *(raio**2)
NameError: name 'Equacao1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:46:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("insira o raio desejado:"))
import math
Equacao1 = math.pi *(raio**2)
 
import math
Equacao2 = (4/3) * math.pi * (raio**3)

print(round(Equacao1,3))
print(round(Equacao2,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:47:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("insira o raio desejado:"))
import math
Equacao1 = math.pi *(raio**2)
 
import math
Equacao2 = (4/3) * math.pi * (raio**3)

print(round(Equacao1,3))
print(round(Equacao2,3))
-- EXECUTION TIME:
0.207134
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
